# hdf5_correlator

./: CMakeLists.txt  Makefile  README.md  beamform_era.cpp  calsolutions.cpp  calsolutions.h  defines.h  delay2phase.cpp  eda1_tpm_coefficients.cpp  eda1_tpm_coefficients.h  eda2_tpm_coefficients.cpp  eda2_tpm_coefficients.h  geometry.h  hdf5_commons.cpp  hdf5corr2others.cpp  hdf5corr2others_tests.cpp  main.cpp  main_dump.cpp  mwaconfig.cpp  mwaconfig.h  norm_test.cpp  test.cpp
examples/read_hdf5/: CMakeLists.txt  coefficients.h  hdf5_commons.h  main.cpp
scripts/: beam.sh  beamform_aavs_server.sh  beamform_all.sh  beamform_x.sh  beamform_x_loop.sh  beamform_y.sh  beamform_y_loop.sh  convert.sh  dada_header_converter.py  dat2dada.sh  dat2dada2.sh  dat2dada2_all.sh  dat2dada2_multichannel.sh  dat2dada2_multifreq.sh  dspsr_wrapper.sh  find_phases_from_corr.sh  get_hdf5_part.py  get_last_calib.sh  get_station_name.sh  hdf2uvfits_sun.sh  hdf2uvfits_sun_aavs2.sh  hdf2uvfits_zenith.sh  hdf2uvfits_zenith_aavs2.sh  hdf5_info.py  hdf5_names2utc.sh  hdf5_to_bin.sh  hdf5_to_bin_all.sh  hdf5_to_dada_converter.py  hdf5_to_uvfits_all.sh  hdf5corr.sh  hdf5dump.sh  hdf5fits_station_beam.py  image_tile_allsky.py  merge.sh  merge_all_dat.sh  merge_channel.sh  merge_hdf5_n_chan.py  merge_n_hdf5_files.py  plot_power_vs_time.py  process_all_dates.sh  (+13 more)
scripts/config/dspsr/: B0950.eph  CRAB.eph  J0437.eph  J0630.eph  J0835.eph  J1456.eph  J1752.eph  J2145.eph  VELA.eph
scripts/html/: power.html  power.template
